# nutrition-tracker

./: .dockerignore  .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  DEPLOY_AWS_LIGHTSAIL.md  Dockerfile  README.md  docker-compose.yml  handoff_frontend_revamp.md  index.html  ios-dev-commands.md  nutrition.db  package-lock.json  package.json  plan-aiMemory.md  plan-seed-narrative-and-zero-friction-spec.md  plan-styling.md  start.sh  test_plan  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  desktop-release.yml  nightly-release.yml
backend/: README.md
backend/AI/: nutrilog_pipeline_demo.ts  openfoodfacts_poc.ts  package-lock.json  package.json
frontend/: README.md
misc/: README.md
nutrition-tracker/: package.json
nutrition-tracker/src-tauri/: tauri.conf.json
skills/design-spells/: SKILL.md
src/: App.css  App.tsx  app.css  types.ts
src-ai/: package-lock.json  package.json  tsconfig.json
src-ai/scripts/: nlog_pipeline.ts
src-rust-crates/database/: Cargo.toml  README.md
src-rust-crates/database/sql/: init.sql  seed_demo_30_days.sql
src-rust-crates/database/src/: ai.rs  export.rs  food.rs  lib.rs  meal.rs  session.rs  user_profile.rs
src-rust-crates/model/: Cargo.toml
src-rust-crates/model/src/: ai.rs  food.rs  lib.rs  meal.rs  metric_unit.rs  user_profile.rs  validate.rs
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/src/: ai_config.rs  camera_permission.rs  lib.rs  main.rs  microphone_permission.rs  network_config.rs
src-tauri/src/api/: ai.rs  audio_transcription.rs  mod.rs  network_errors.rs  openfoodfacts.rs  photo_food.rs
src-tauri/src/credentials/: commands.rs  keyring_store.rs  mod.rs  secure_file_store.rs
src-tauri/src/utils/: ipc_errors.rs  ipc_guards.rs  mod.rs  network_errors.rs
src/bindings/: commands.ts  index.ts  types.ts
src/components/: AddEntryModal.tsx  BarcodeScanner.tsx  ConfirmLogCard.tsx  FoodEntryRow.tsx  FoodPhotoScanner.tsx  FoodVoiceRecorder.tsx  GoalVsActualCard.tsx  MultiMacroTrendCard.tsx  NutritionChartCard.tsx  ProfileForm.tsx  ProfileSummaryCard.tsx
src/components/charts/: MacroTrendChart.tsx  MealDistributionChart.tsx  PremiumAreaChart.tsx  PremiumDonutChart.tsx  StackedProgressBar.tsx
src/components/ui/: Button.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  StatCard.tsx
src/hooks/: cameraSession.ts  useAiConfig.ts  useBarcodeScanner.ts  useCredentials.ts  useDailyLog.ts  useUserProfile.ts
src/layout/: AppShell.tsx
src/lib/: DatabaseSessionContext.tsx  NetworkContext.tsx  ThemeContext.tsx  ToastContext.tsx  bmr.ts  foodLogStore.ts  nutritionAlerts.ts  nutritionTargets.ts  profileStore.ts
src/pages/: AiAdvisor.tsx  DailyLog.tsx  FoodSearch.tsx  Insights.tsx  LandingPage.tsx  Settings.tsx  WorkspaceSetupPage.tsx
src/styles/: ai-advisor.css  app.css  barcode-scanner.css  credentials.css
src/types/: foodLog.ts  profile.ts
