[workspace]
resolver = "2"
members = [
    "src-tauri",
    "src-rust-crates/model",
    "src-rust-crates/database",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "GPL-3.0-or-later"

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
