[package]
name = "nutrition-tracker"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "A Tauri App"
authors = ["you"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nutrition_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri.workspace = true
tauri-plugin-opener.workspace = true
serde.workspace = true
serde_json.workspace = true

nutrack-database = { path = "../src-rust-crates/database" }
nutrack-model = { path = "../src-rust-crates/model" }
