[package]
name = "nutrack-database"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
thiserror = "2.0.18"
tauri.workspace = true
nutrack-model.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_xlsxwriter = "0.79"

[dev-dependencies]
tempfile = "3.26.0"
